@@ -610,6 +610,9 @@ do {
   Grammar.Unsafe.clear_entry class_str_item
 };
 
+Pcaml.parse_interf.val := Grammar.Entry.parse interf;
+Pcaml.parse_implem.val := Grammar.Entry.parse implem;
+
 value sexpr = Grammar.Entry.create gram "sexpr";
 value atom = Grammar.Entry.create gram "atom";
 
